--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,9 +7,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-* {
-  box-sizing: border-box;
-}
+* { box-sizing: border-box; }
 
 html, body, #root {
   width: 100%;
@@ -18,4 +16,8 @@ html, body, #root {
 
 body {
   margin: 0;
+  /* IMPORTANT: pas de flex/center ici */
+  display: block;
+  background: #f6f7fb;
+  color: #111827;
 }
